--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,14 @@ services:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 10s
       retries: 10 
+    phpmyadmin:
+    image: phpmyadmin:latest
+    ports:
+      - "9090:80"
+    environment:
+      PMA_HOST: wdpvendas
+      MYSQL_ROOT_PASSWORD: 1234
+    restart: always
+    depends_on:
+      wdpvendas:
+        condition: service_healthy
